# kit

./: .gitignore  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml
app/: config.yaml  main.py  router.py
db/: __init__.py  session.py  url.py
kit/: config.py  hooks.py  instructions.py  paths.py
kit/agents/: __init__.py  navigator.py  settings.py
kit/tools/: __init__.py  build.py  knowledge.py
scripts/: build_image.sh  format.sh  railway_env.sh  railway_redeploy.sh  railway_up.sh  validate.sh  venv_setup.sh
