[project]
name = "kit"
version = "0.1.0"
description = "A simpler personal agent. Based on pal."
requires-python = ">=3.12,<4"
readme = "README.md"
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[os,telegram]",
  "ddgs",
  "openai",
  "pgvector",
  "psycopg[binary]",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kit*", "db*", "app*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["agno.*", "pgvector.*", "psycopg.*"]
ignore_missing_imports = true
